[package]
authors = ["10takla <https://github.com/10takla>"]
description = "Many reworked implementations from the standard library, as well as new solutions for easy coding."
edition = "2021"
keywords = ["std", "reset"]
license = "MIT"
name = "std-reset"
repository = "https://github.com/10takla/std-reset"
version = "0.1.3"

[dependencies]
paste = "1.0.15"
std-reset-macros = {version = "0.1.3", path = "macros"}

[workspace]
members = ["macros"]
