[package]
authors = ["10takla <https://github.com/10takla>"]
description = "Many reworked implementations from the standard library, as well as new solutions for easy coding."
edition = "2021"
keywords = ["std", "reset"]
license = "MIT"
name = "std-reset"
repository = "https://github.com/10takla/std-reset"
version = "0.1.5"

[dependencies]
paste = "1.0.15"
std-reset-macros = { version = "^0.1.0", path = "macros" }

[workspace]
members = ["macro_functions", "macros"]
default-members = ["macros"]

[workspace.dependencies]
proc-macro2 = "1.0.88"
quote = "1.0.37"
syn = { version = "2.0.79", features = ["full", "extra-traits"] }
