[package]
name = "macro_functions"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Utility functions for quickly parsing syn structures"
keywords = ["syn", "macros"]
repository = "https://github.com/10takla/std-reset/macro_functions"

[dependencies]
proc-macro2 = {workspace = true}
quote = {workspace = true}
syn = {workspace = true}

[features]
unstable = []