[package]
edition = "2021"
name = "std-reset-macros"
version = "0.1.0"
license = "MIT"
description = "Procedural macros for std-reset library."
keywords = ["std", "reset", "macros"]
repository = "https://github.com/10takla/std-reset/macros"

[dependencies]
proc-macro2 = "1.0.80"
quote = "1.0"
syn = {version = "1.0", features = ["full"]}

[lib]
proc-macro = true
