[package]
edition = "2021"
name = "std-reset-macros"
version = "0.1.5"
license = "MIT"
description = "Procedural macros for std-reset library."
keywords = ["std", "reset", "macros"]
repository = "https://github.com/10takla/std-reset/macros"

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
paste = "1.0.15"
macro_functions = { version = "^0.1.0", path = "../macro_functions" }

[lib]
proc-macro = true
